feat: cert-authn_plugin project (janssen) has been updated;

--- a/jans/code/plugins/cert-authn_plugin/pom.xml
+++ b/jans/code/plugins/cert-authn_plugin/pom.xml
@@ -92,6 +92,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>io.jans</groupId>
+            <artifactId>jans-scim-model</artifactId>
+            <version>${jans.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>net.sf.jmimemagic</groupId>
             <artifactId>jmimemagic</artifactId>
             <version>0.1.5</version>
