--- a/jans/code/plugins/email_2fa_plugin/pom.xml
+++ b/jans/code/plugins/email_2fa_plugin/pom.xml
@@ -13,7 +13,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <plugin.id>email_2fa_plugin</plugin.id>
-        <version>5.0.0-12</version>
+        <plugin.version>5.0.0-12</plugin.version>
+        <jans.version>1.0.14-SNAPSHOT</jans.version>
     </properties>
 
     <repositories>
