--- a/jans/code/plugins/cert-authn_plugin/pom.xml
+++ b/jans/code/plugins/cert-authn_plugin/pom.xml
@@ -51,7 +51,7 @@
                                         <Plugin-Id>${plugin.id}</Plugin-Id>
                                         <Plugin-Version>${plugin.version}</Plugin-Version>
                                         <Plugin-Provider>Gluu Inc.</Plugin-Provider>
-                                        <Plugin-Class>org.gluu.casa.plugins.cert.CertAuthenticationPlugin</Plugin-Class>
+                                        <Plugin-Class>org.gluu.casa.plugins.cert_authn_plugin.CertAuthenticationPlugin</Plugin-Class>
                                         <Plugin-Description>Allows enrollment and authentication via client certificates</Plugin-Description>
                                         <Plugin-License>Visit https://gluu.org/docs/casa/#license</Plugin-License>
                                         <Logger-Name>org.gluu.casa.plugins</Logger-Name>
