--- a/jans/code/plugins/approval_plugin/pom.xml
+++ b/jans/code/plugins/approval_plugin/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <plugin.id>approval_plugin</plugin.id>
         <plugin.version>5.0.0-12</plugin.version>
         <jans.version>1.0.14-SNAPSHOT</jans.version>
     </properties>
