--- a/jans/code/plugins/email_2fa_plugin/pom.xml
+++ b/jans/code/plugins/email_2fa_plugin/pom.xml
@@ -49,7 +49,7 @@
                                         <Plugin-Version>${plugin.version}</Plugin-Version>
                                         <Plugin-Provider>Gluu Inc.</Plugin-Provider>
                                         <Plugin-Class>org.gluu.casa.plugins.email_2fa_plugin.Email2faPlugin</Plugin-Class>
-                                        <Plugin-Description> plugin to enroll Email as a 2FA Credential for EmailOTP 2FA.</Plugin-Description>
+                                        <Plugin-Description>A plugin to enroll Email as a 2FA Credential for EmailOTP 2FA.</Plugin-Description>
                                         <Plugin-License>Visit https://gluu.org/docs/casa/#license</Plugin-License>
                                         <Logger-Name>org.gluu.casa.plugins</Logger-Name>
                                     </manifestEntries>
